-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0
-
None
-
Windows 7, VS 2013
-
9b59e51c5064c67c423389c2c884d009903910c7
Configuring Qt with ‘-mp’ option will generate a warning when creating project files with ‘qmake –tp vc’. It seems /MP option enables /FS by default (http://msdn.microsoft.com/en-us/library/dn502518.aspx) and this result the following warning:
WARNING: Could not parse Compiler option: -FS, added as AdditionalOption